force-app/main/default/objects/NCMT_Other_Direct_Cost__c/NCMT_Other_Direct_Cost__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <label>NCMT Other Direct Cost</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Other Direct Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>