force-app/main/default/objects/NCMT_Other_Direct_Cost__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>