force-app/main/default/objects/NCMT_Other_Direct_Cost__c/fields/Cost_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Cost_Based_On__c</fullName>
    <label>Cost Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core/Shell</fullName>
                <default>true</default>
                <label>Core/Shell</label>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>