force-app/main/default/objects/NCMT_Other_Direct_Cost__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>