force-app/main/default/objects/NCMT_Other_Direct_Cost__c/fields/Cost_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Description__c</fullName>
    <label>Cost Category Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>