force-app/main/default/objects/NCMT_Other_Direct_Cost__c/fields/NCMT_Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Other_Cost__c</fullName>
    <label>NCMT Other Cost</label>
    <referenceTo>NCMT_Other_Cost__c</referenceTo>
    <relationshipLabel>NCMT Other Direct Costs</relationshipLabel>
    <relationshipName>NCMT_Other_Direct_Costs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>