force-app/main/default/objects/NCMT_Other_Direct_Cost__c/fields/Project_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Summary__c</fullName>
    <label>Project Cost Summary</label>
    <referenceTo>NCMT_Project_Cost_Summary__c</referenceTo>
    <relationshipLabel>NCMT Other Direct Costs</relationshipLabel>
    <relationshipName>NCMT_Other_Direct_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>