force-app/main/default/objects/NCMT_Other_Direct_Cost__c/fields/Sub_Description__c.field-meta.xml
<CustomField>
    <fullName>Sub_Description__c</fullName>
    <description>Description at Uniformat Level</description>
    <label>Sub Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>